# pycountatf

./: =1.22.0  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycountatf/: __init__.py
tests/: test_pycountatf.py
